FEAT: (EIF-T-24) foodCardController Documentation - 음식점카드 API 문서 생성 - 500 오류 반환 값 변경
