# docs/swagger.yaml
@@ -1,3 +1,42 @@
+definitions:
+  foodCardControllerCommandDto.CreateRequest:
+    properties:
+      address:
+        description: 음식점 주소
+        example: 서울특별시 용산구 남영동 80-4
+        type: string
+      name:
+        description: 음식점 이름
+        example: 초원
+        type: string
+    type: object
+  foodCardControllerCommandDto.CreateResponse:
+    properties:
+      code:
+        example: SUCCESS
+        type: string
+      foodCard:
+        $ref: '#/definitions/foodCardControllerCommandDto.FoodCard'
+    type: object
+  foodCardControllerCommandDto.CreateResponseError:
+    properties:
+      code:
+        type: string
+      errorMessage:
+        type: string
+    type: object
+  foodCardControllerCommandDto.FoodCard:
+    properties:
+      address:
+        description: 음식점 주소
+        type: string
+      name:
+        description: 음식점 이름
+        type: string
+      uuid:
+        description: 음식점 고유 ID
+        type: string
+    type: object
 host: eveningisfood.com
 info:
   contact:
@@ -6,5 +45,35 @@ info:
   description: 예로부터 약속은 저녁에 이루어 졌고, 역사는 술 속에서 만들어졌습니다.
   title: EveningIsFood API
   version: "0"
-paths: {}
+paths:
+  /foodCard:
+    post:
+      consumes:
+      - application/json
+      description: 음식점카드를 생성하는 API
+      parameters:
+      - description: 음식점카드 생성 Request Body
+        in: body
+        name: foodCard
+        required: true
+        schema:
+          $ref: '#/definitions/foodCardControllerCommandDto.CreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 음식점카드 생성 Response
+          schema:
+            $ref: '#/definitions/foodCardControllerCommandDto.CreateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/foodCardControllerCommandDto.CreateResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/foodCardControllerCommandDto.CreateResponseError'
+      summary: 음식점카드 생성
+      tags:
+      - foodShopCard
 swagger: "2.0"
